@@ -149,9 +149,10 @@ function defer() {
  * of the returned object, apart from that it is usable whereever promises are
  * bought and sold.
  */
-exports.Promise = Promise;
+exports.makePromise = makePromise;
+exports.Promise = makePromise; // deprecated
 
-function Promise(descriptor, fallback, valueOf) {
+function makePromise(descriptor, fallback, valueOf) {
 
     if (fallback === undefined) {
         fallback = function (op) {
@@ -228,7 +229,7 @@ function isRejected(object) {
  */
 exports.reject = reject;
 function reject(reason) {
-    return Promise({
+    return makePromise({
         "when": function (rejected) {
             return rejected ? rejected(reason) : reject(reason);
         }
@@ -259,7 +260,7 @@ function ref(object) {
     // not already Promises.
     if (isPromise(object))
         return object;
-    return Promise({
+    return makePromise({
         "when": function (rejected) {
             return object;
         },
@@ -298,7 +299,7 @@ function ref(object) {
  */
 exports.def = def;
 function def(object) {
-    return Promise({
+    return makePromise({
         "isDef": function () {}
     }, function fallback(op, resolved) {
         var args = Array.prototype.slice.call(arguments, 2);
